[gd_scene load_steps=30 format=3 uid="uid://dvajurbkaakch"]

[ext_resource type="Script" uid="uid://bs6sbg3430tln" path="res://scenes/main.gd" id="1_0wfyh"]
[ext_resource type="StyleBox" uid="uid://nlw5h3bdhv0j" path="res://assets/styles/normal_state_mode.tres" id="2_jyhfs"]
[ext_resource type="StyleBox" uid="uid://emwaqs7eorah" path="res://assets/styles/selected_mode.tres" id="2_sugp2"]
[ext_resource type="FontFile" uid="uid://cwrwhi4eaooyd" path="res://assets/fonts/RobotoMono-Regular.ttf" id="2_ya4ey"]
[ext_resource type="Script" uid="uid://ooptak1m84fv" path="res://scenes/project_files.gd" id="5_tipki"]
[ext_resource type="Script" uid="uid://drugdinvgd4ax" path="res://scenes/node_tree_controler.gd" id="5_trceg"]
[ext_resource type="Script" uid="uid://vgfq5gttywkt" path="res://scenes/view_port_code.gd" id="6_tipki"]
[ext_resource type="Script" uid="uid://cnpcsjpmxi0ju" path="res://scenes/view_port_2d.gd" id="7_eb6dy"]
[ext_resource type="Script" uid="uid://2k5kwbj20vm8" path="res://scripts/block_save_manager.gd" id="7_o6xl0"]
[ext_resource type="Script" uid="uid://ddajlju6garrl" path="res://scenes/warning.gd" id="9_85g3d"]
[ext_resource type="Script" uid="uid://bkiblvqtqruc0" path="res://scenes/popup_panel.gd" id="9_choun"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jbj1t"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.08235294, 0.08235294, 0.08235294, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_muem4"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.57254905, 0.57254905, 0.57254905, 0.41568628)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.53333336, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dp3eg"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.57254905, 0.57254905, 0.57254905, 0.41568628)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0wfyh"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.1254902, 0.1254902, 0.1254902, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2509804, 0.2509804, 0.2509804, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sgp6g"]
content_margin_left = 10.0
content_margin_top = 12.0
content_margin_right = 10.0
content_margin_bottom = 12.0
bg_color = Color(0.101960786, 0.101960786, 0.101960786, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85g3d"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.1254902, 0.1254902, 0.1254902, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tipki"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.1254902, 0.1254902, 0.1254902, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.53333336, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_choun"]
bg_color = Color(0.24477652, 0.24477637, 0.24477637, 0.6392157)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ya4ey"]
bg_color = Color(0.1254902, 0.1254902, 0.1254902, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.08235294, 0.08235294, 0.08235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eb6dy"]
content_margin_left = 3.0
content_margin_right = 3.0
bg_color = Color(0.25490198, 0.25490198, 0.25490198, 0.48235294)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_trceg"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.08235294, 0.08235294, 0.08235294, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a8y0u"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.1254902, 0.1254902, 0.1254902, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.53333336, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkv2x"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.1254902, 0.1254902, 0.1254902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ld40"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0.08235294, 0.08235294, 0.08235294, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.53333336, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqmmt"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yc10j"]
bg_color = Color(0.14509805, 0.14509805, 0.14509805, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.08235294, 0.08235294, 0.08235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jscy8"]
bg_color = Color(0.08235294, 0.08235294, 0.08235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pm3ni"]
bg_color = Color(0.1882353, 0.1882353, 0.1882353, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0wfyh")

[node name="GUI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="Settings etc" type="PanelContainer" parent="GUI"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Settings etc"]
layout_mode = 2

[node name="Spacer" type="Control" parent="GUI/Settings etc/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="File" type="MenuButton" parent="GUI/Settings etc/HBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_ya4ey")
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = SubResource("StyleBoxFlat_jbj1t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_muem4")
theme_override_styles/hover = SubResource("StyleBoxFlat_dp3eg")
text = "File"
switch_on_hover = true
item_count = 3
popup/item_0/text = "File Settings"
popup/item_0/id = 0
popup/item_1/text = "Save"
popup/item_1/id = 1
popup/item_2/text = "Save as"
popup/item_2/id = 2

[node name="Export" type="MenuButton" parent="GUI/Settings etc/HBoxContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("2_ya4ey")
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = SubResource("StyleBoxFlat_jbj1t")
theme_override_styles/pressed = SubResource("StyleBoxFlat_muem4")
theme_override_styles/hover = SubResource("StyleBoxFlat_dp3eg")
text = "Export"
switch_on_hover = true
item_count = 1
popup/item_0/text = "Export"
popup/item_0/id = 0

[node name="Main Categories" type="PanelContainer" parent="GUI"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2

[node name="ViewPorts" type="HBoxContainer" parent="GUI/Main Categories"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="2D" type="Button" parent="GUI/Main Categories/ViewPorts"]
custom_minimum_size = Vector2(55, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = ExtResource("2_jyhfs")
theme_override_styles/hover = SubResource("StyleBoxFlat_0wfyh")
text = "2D"

[node name="3D" type="Button" parent="GUI/Main Categories/ViewPorts"]
custom_minimum_size = Vector2(55, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = ExtResource("2_jyhfs")
theme_override_styles/hover = SubResource("StyleBoxFlat_0wfyh")
text = "3D"

[node name="CODE" type="Button" parent="GUI/Main Categories/ViewPorts"]
custom_minimum_size = Vector2(55, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme_override_font_sizes/font_size = 13
theme_override_styles/normal = ExtResource("2_jyhfs")
theme_override_styles/pressed = ExtResource("2_sugp2")
theme_override_styles/hover = SubResource("StyleBoxFlat_0wfyh")
text = "CODE"

[node name="Content" type="HBoxContainer" parent="GUI"]
layout_mode = 2
size_flags_vertical = 3

[node name="left_panel" type="VBoxContainer" parent="GUI/Content"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="ProjectNodes" type="PanelContainer" parent="GUI/Content/left_panel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_sgp6g")

[node name="Inside" type="VBoxContainer" parent="GUI/Content/left_panel/ProjectNodes"]
layout_mode = 2

[node name="Title" type="Label" parent="GUI/Content/left_panel/ProjectNodes/Inside"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Scene Nodes:"

[node name="Tree Control" type="Control" parent="GUI/Content/left_panel/ProjectNodes/Inside"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("5_trceg")

[node name="ProjectFiles" type="PanelContainer" parent="GUI/Content/left_panel"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_sgp6g")

[node name="Inside" type="VBoxContainer" parent="GUI/Content/left_panel/ProjectFiles"]
layout_mode = 2

[node name="Title" type="Label" parent="GUI/Content/left_panel/ProjectFiles/Inside"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Project Files:"

[node name="Tree" type="Tree" parent="GUI/Content/left_panel/ProjectFiles/Inside"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_85g3d")
theme_override_styles/focus = SubResource("StyleBoxFlat_tipki")
theme_override_styles/hovered = SubResource("StyleBoxFlat_choun")
script = ExtResource("5_tipki")

[node name="Folder_popup" type="PopupMenu" parent="GUI/Content/left_panel/ProjectFiles/Inside/Tree"]
oversampling_override = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ya4ey")
theme_override_styles/hover = SubResource("StyleBoxFlat_eb6dy")

[node name="Folder_file_submenu" type="PopupMenu" parent="GUI/Content/left_panel/ProjectFiles/Inside/Tree/Folder_popup"]
oversampling_override = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ya4ey")
theme_override_styles/hover = SubResource("StyleBoxFlat_eb6dy")

[node name="File_popup" type="PopupMenu" parent="GUI/Content/left_panel/ProjectFiles/Inside/Tree"]
oversampling_override = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ya4ey")
theme_override_styles/hover = SubResource("StyleBoxFlat_eb6dy")

[node name="file_file_submenu" type="PopupMenu" parent="GUI/Content/left_panel/ProjectFiles/Inside/Tree/File_popup"]
oversampling_override = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ya4ey")
theme_override_styles/hover = SubResource("StyleBoxFlat_eb6dy")

[node name="ViewPort" type="PanelContainer" parent="GUI/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="2D" type="Control" parent="GUI/Content/ViewPort"]
visible = false
layout_mode = 2
script = ExtResource("7_eb6dy")

[node name="3D" type="Control" parent="GUI/Content/ViewPort"]
visible = false
layout_mode = 2

[node name="CODE" type="Control" parent="GUI/Content/ViewPort"]
layout_mode = 2
script = ExtResource("6_tipki")

[node name="Empty_sy787c21t871ct878t712c87t 1ct787t13c38713t87c87t713t8731" type="Control" parent="GUI/Content/ViewPort/CODE"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GUI/Content/ViewPort/CODE/Empty_sy787c21t871ct878t712c87t 1ct787t13c38713t87c87t713t8731"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Open a script to see something here"
horizontal_alignment = 1
vertical_alignment = 1

[node name="right_panel" type="VBoxContainer" parent="GUI/Content"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2

[node name="Properties" type="PanelContainer" parent="GUI/Content/right_panel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_sgp6g")

[node name="Inside" type="VBoxContainer" parent="GUI/Content/right_panel/Properties"]
layout_mode = 2

[node name="Title" type="Label" parent="GUI/Content/right_panel/Properties/Inside"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
text = "Node Properties:"

[node name="SaveManager" type="Node" parent="."]
script = ExtResource("7_o6xl0")

[node name="Project Settings" type="Window" parent="."]
oversampling_override = 1.0
title = "Project Settings"
initial_position = 4
size = Vector2i(700, 400)
visible = false
transient = true
exclusive = true

[node name="Panel" type="Panel" parent="Project Settings"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Project Settings/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Well, I think I've already said that this project is in very alpha stage.
So I think it's obvious that there's no thing as \"Project Settings\"."
horizontal_alignment = 1
vertical_alignment = 1

[node name="warning" type="Window" parent="."]
oversampling_override = 1.0
title = "Are you sure?"
initial_position = 4
size = Vector2i(920, 150)
visible = false
transient = true
exclusive = true
script = ExtResource("9_85g3d")

[node name="Panel" type="Panel" parent="warning"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="warning/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Label" type="Label" parent="warning/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="warning/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 43.27)
layout_mode = 2
alignment = 1

[node name="Yes" type="Button" parent="warning/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_trceg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_a8y0u")
theme_override_styles/hover = SubResource("StyleBoxFlat_jkv2x")
theme_override_styles/focus = SubResource("StyleBoxFlat_a8y0u")
text = "Okay"

[node name="Rename_file_panel" type="PopupPanel" parent="."]
oversampling_override = 1.0
size = Vector2i(76, 39)
theme_override_styles/panel = SubResource("StyleBoxFlat_0ld40")

[node name="LineEdit" type="LineEdit" parent="Rename_file_panel"]
offset_left = 3.0
offset_top = 3.0
offset_right = 73.0
offset_bottom = 36.0
theme_override_fonts/font = ExtResource("2_ya4ey")
theme_override_styles/normal = SubResource("StyleBoxFlat_gqmmt")
theme_override_styles/read_only = SubResource("StyleBoxFlat_gqmmt")
theme_override_styles/focus = SubResource("StyleBoxFlat_gqmmt")
expand_to_text_length = true

[node name="SaveProgress" type="PopupPanel" parent="."]
oversampling_override = 1.0
initial_position = 4
size = Vector2i(400, 150)
theme_override_styles/panel = SubResource("StyleBoxFlat_yc10j")
script = ExtResource("9_choun")

[node name="VBoxContainer" type="VBoxContainer" parent="SaveProgress"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 398.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SaveProgress/VBoxContainer"]
custom_minimum_size = Vector2(0, 63.34)
layout_mode = 2
text = "Saving code please wait..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="SaveProgress/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ya4ey")
theme_override_styles/background = SubResource("StyleBoxFlat_jscy8")
theme_override_styles/fill = SubResource("StyleBoxFlat_pm3ni")
value = 50.0

[connection signal="pressed" from="GUI/Main Categories/ViewPorts/2D" to="." method="_on_2d_pressed"]
[connection signal="pressed" from="GUI/Main Categories/ViewPorts/3D" to="." method="_on_3d_pressed"]
[connection signal="pressed" from="GUI/Main Categories/ViewPorts/CODE" to="." method="_on_code_pressed"]
[connection signal="gui_input" from="GUI/Content/left_panel/ProjectFiles/Inside/Tree" to="GUI/Content/left_panel/ProjectFiles/Inside/Tree" method="_on_tree_gui_input"]
[connection signal="id_pressed" from="GUI/Content/left_panel/ProjectFiles/Inside/Tree/Folder_popup" to="GUI/Content/left_panel/ProjectFiles/Inside/Tree" method="_on_folder_popup_id_pressed"]
[connection signal="id_pressed" from="GUI/Content/left_panel/ProjectFiles/Inside/Tree/Folder_popup/Folder_file_submenu" to="GUI/Content/left_panel/ProjectFiles/Inside/Tree" method="_on_folder_file_submenu_id_pressed"]
[connection signal="id_pressed" from="GUI/Content/left_panel/ProjectFiles/Inside/Tree/File_popup" to="GUI/Content/left_panel/ProjectFiles/Inside/Tree" method="_on_file_popup_id_pressed"]
[connection signal="id_pressed" from="GUI/Content/left_panel/ProjectFiles/Inside/Tree/File_popup/file_file_submenu" to="GUI/Content/left_panel/ProjectFiles/Inside/Tree" method="_on_file_file_submenu_id_pressed"]
[connection signal="close_requested" from="Project Settings" to="." method="_on_project_settings_close_requested"]
[connection signal="pressed" from="warning/Panel/VBoxContainer/HBoxContainer/Yes" to="warning" method="_on_yes_pressed"]
[connection signal="text_submitted" from="Rename_file_panel/LineEdit" to="GUI/Content/left_panel/ProjectFiles/Inside/Tree" method="_on_line_edit_text_submitted"]
